# miso-chartjs

./: README.md  app.cabal  cabal.project
app/: Main.hs
js/: chart.js
static/: index.html  styles.css
